manifest/admission-delete.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: k8s-custom-controllera-delete
webhooks:
  - name: k8s-at-controller.default.svc.cluster.local
    rules:
      - operations:
          - "DELETE"
        apiGroups:
          - "nhn.cloud.io"
        apiVersions:
          - "v1"
        resources:
          - "instances"
    failurePolicy: Ignore
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        path: "/delete"
        port: 443
        name: k8s-at-controller
        namespace: default
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxVENDQWIyZ0F3SUJBZ0lSQUsrOXoxRTZZMHNCZ3VtRCs0cldQM2d3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQXd3SGF6aHpMV1ZrZFRBZUZ3MHlNVEEwTWpjeE1UVTRORFphRncweU5qQTBNamN4TVRVNApORFphTUJJeEVEQU9CZ05WQkFNTUIyczRjeTFsWkhVd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFETjBnbUJZOW8zdVJaWERZSE1VU0V2U0syTWVwL0VIdlMxYVlTNFgvTGxQK25ST0FPUzFzL2EKa3UrTHdHVCtweTZFeTJqL3JialR3QWlLYWw4T2tGTGI5Vzc4QVd5YUZUd2VOZzRYbnlEcmVQaGdmVEEzQkFTdQpxR2VUWWM4NHQ0 [...]
